--- a/src/main/webapp/assets/css/style-starter.css
+++ b/src/main/webapp/assets/css/style-starter.css
@@ -19014,6 +19014,12 @@ header.nav-fixed {
 }
 
 /* serach */
+.search-header
+{
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
 .search-header input {
   font-size: 15px;
   border-radius: 30px 0 0 30px;
@@ -24383,3 +24389,15 @@ h4.inner-text-title {
   color: var(--secondary-color);
 }
 /* //contact */
+
+.amountform
+{
+  max-width: 100px;
+  height: 100%;
+  padding-right: 15px;
+}
+
+.amountinput
+{
+  height: 100%;
+}
